Fixed missalignment

--- a/projects/index.css
+++ b/projects/index.css
@@ -25,7 +25,6 @@
 		text-align: left;
 		color: #1b1b1b;
 		margin-bottom: 16px;
-		width: calc(100% - 32px);
 		border-radius: 5px;
 		border-top: 1px solid rgba(0, 0, 0, 0.3);
 		border-left: 1px solid rgba(0, 0, 0, 0.4);
@@ -47,7 +46,6 @@
 		text-align: left;
 		color: #1b1b1b;
 		margin-bottom: 16px;
-		width: calc(100% - 32px);
 		border-radius: 5px;
 		border-top: 1px solid rgba(0, 0, 0, 0.3);
 		border-left: 1px solid rgba(0, 0, 0, 0.4);
